--- a/ui/src/Input.css
+++ b/ui/src/Input.css
@@ -8,7 +8,7 @@
     border-radius: 10px;
     background-color: #2e2e2e;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: 'Courier New', Courier, monospace;
   }
   
