--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -17,10 +17,10 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;;
   font-size: calc(10px + 2vmin);
+  display: flex;
   color: white;
 }
 
@@ -36,3 +36,4 @@
     transform: rotate(360deg);
   }
 }
+
