--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -17,12 +17,28 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: space-between;;
+  flex-direction: column;
   font-size: calc(10px + 2vmin);
   display: flex;
   color: white;
 }
+  .App-header1{
+    align-items: center;
+    justify-content: space-between;
+    font-size: calc(10px + 2vmin);
+    display: flex;
+    color: white;
+  }
+
+  .App-header2{
+    height: 100%; 
+    align-items: center;
+    justify-content: space-between;;
+    font-size: calc(10px + 2vmin);
+    justify-content: center;
+    display: flex;
+    color: white;
+  }
 
 .App-link {
   color: #61dafb;
