--- a/ui/src/Input.css
+++ b/ui/src/Input.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 25%;
   }
   
   .header-text {
@@ -24,9 +25,9 @@
   }
   
   .audio-input {
-    width: 96%;
+    width: 95%;
     padding: 10px;
-    margin: 10px 0;
+    margin: 5px 0;
     border: none;
     border-radius: 5px;
     background-color: #444;
@@ -46,6 +47,7 @@
     background-color: #444;
     color: white;
     font-size: 16px;
+    margin-top: 5px;
   }
   
   .dropdown-menu:focus {
