--- a/ui/src/Output.css
+++ b/ui/src/Output.css
@@ -1,30 +1,49 @@
-
+/* Style for output-container */
 .output-container {
-  text-align: center;
-  margin: 20px;
-  margin-left: auto;
-  margin-right: 3%;
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
+  margin-top: 20px;
 }
 
-.output-container a {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #00bcd4;
+.download-button {
+  background-color: #4CAF50; /* Green */
   color: white;
-  text-decoration: none;
-  border-radius: 5px;
+  padding: 12px 24px;
   font-size: 16px;
-  margin: 3px;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+  border-radius: 8px;
   transition: background-color 0.3s ease;
+  width: 200px;
 }
 
-.output-container a:hover {
-  background-color: #21a7b8;
+.download-button:hover {
+  background-color: #45a049; /* Darker green */
 }
 
-.output-container a:active {
-  background-color: #21a7b8;
+/* Button styles for PDF */
+.pdf-button {
+  background-color: #2196F3; /* Blue */
+}
+
+.pdf-button:hover {
+  background-color: #1976D2; /* Darker blue */
+}
+
+/* Button styles for MIDI */
+.midi-button {
+  background-color: #f44336; /* Red */
+}
+
+.midi-button:hover {
+  background-color: #e53935; /* Darker red */
+}
+
+/* Error message styling */
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
 }
